--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/main.css" />
     <script
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"
       src="https://kit.fontawesome.com/fb638f2a90.js"
       crossorigin="anonymous"
     ></script>
@@ -68,6 +69,6 @@
       </div>
     </main>
 
-    <script src="../js/main.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
